lang/tests/compile_fail/seeds_raw_on_account.stderr
error[E0277]: the trait bound `[&[u8; 6]; 1]: AddressVerify` is not satisfied
  --> tests/compile_fail/seeds_raw_on_account.rs:11:10
   |
11 | #[derive(Accounts)]
   |          ^^^^^^^^ the trait `AddressVerify` is not implemented for `[&[u8; 6]; 1]`
   |
   = help: the following other types implement trait `AddressVerify`:
             &solana_address::Address
             solana_address::Address
   = note: this error originates in the derive macro `Accounts` (in Nightly builds, run with -Z macro-backtrace for more info)
